First meditation app. I have create main layout and added buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TimeForYourself</string>
+    <string name="sunset">Sunset</string>
+    <string name="todo">TODO</string>
 </resources>
