--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TimeForYourself</string>
     <string name="sunset">Sunset</string>
     <string name="todo">TODO</string>
+    <string name="paradise">Paradise</string>
 </resources>
