--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="sounds_of_happiness">Sounds of happiness</string>
     <string name="free_your_mind">Free your mind</string>
     <string name="stay_focused_and_balanced">Stay focused and balanced</string>
+    <string name="todo1">TODO</string>
+    <string name="share">Share</string>
+    <string name="rate_us">Rate us</string>
+    <string name="feedback">Feedback</string>
+    <string name="support_us">Support us</string>
 </resources>
