--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,21 @@
         <item> 07 </item>
         <item> 08 </item>
         <item> 09 </item>
+        <item> 10 </item>
         <item> 11 </item>
         <item> 12 </item>
+        <item> 13 </item>
+        <item> 14 </item>
+        <item> 15 </item>
+        <item> 16 </item>
+        <item> 17 </item>
+        <item> 18 </item>
+        <item> 19 </item>
+        <item> 22 </item>
+        <item> 21 </item>
+        <item> 22 </item>
+        <item> 23 </item>
+
     </string-array>
     <string-array name="minutes">
         <item> 00 </item>
@@ -59,6 +72,7 @@
         <item> 08 </item>
         <item> 09 </item>
         <item> 10 </item>
+        <item> 11 </item>
         <item> 12 </item>
         <item> 13 </item>
         <item> 14 </item>
