--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,15 @@
     <string name="support_us">Support us</string>
     <string name="hours">Hours</string>
     <string name="minutes">Minutes</string>
+    <string name="timerDuration">Timer duration</string>
+    <string name="startTimer">Start Timer</string>
+    <string name="setATimer">Set a timer</string>
+    <string name="Choise">Choice</string>
+    <string name="Choice1">Choice1</string>
+    <string name="FileName">FileName</string>
     <string-array name="timer">
         <item>Timer off</item>
-        <item>Custom timer</item>
+        <item>Set your own timer</item>
         <item>5 Minutes</item>
         <item>10 Minutes</item>
         <item>15 Minutes</item>
